app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmaas-service
  namespace: ns002i011764
  labels:
    appcode: APP90567
spec:
  selector:
    appcode: APP90567
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8010
  type: ClusterIP
